--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -1,43 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Ejercicio Formulario</title>
     <style>
-        form {
-            display: block;
-            margin-top: 0em;
-        }
+      form {
+        display: block;
+        margin-top: 0em;
+      }
     </style>
-</head>
-<body>
-<!--Cree un Formulario con los campos que se proponen a continuacion-->
-<!--Agregue el atributo legend-->
+  </head>
+  <body>
+    <!--Cree un Formulario con los campos que se proponen a continuacion-->
+    <!--Agregue el atributo legend-->
 
-<!--Si tienes dudas de como hacer un formulario, puedes consultar:
+    <!--Si tienes dudas de como hacer un formulario, puedes consultar:
     https://www.w3schools.com/html/tryit.asp?filename=tryhtml_elem_output-->
 
-<h3>Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!</h3>
-Nombre:
-Apellido:
-Sexo: Masculino Femenino
-Edad:
-Email:
-Usuario:
-Password:
-Confirmar Password:
+    <h3>
+      Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!
+    </h3>
+    <form id="formulario_suscripcion">
+      <p>Nombre: <input type="text" name="nombre" placeholder="Nombre" /></p>
 
-Tipo de servicio: Free / Standard / Premium
-Tema:
-Política
-Negocios
-Tecnología
-Salud
+      <p>
+        Apellido: <input type="text" name="apellido" placeholder="Apellido" />
+      </p>
 
-Agregue un comentario:
+      <p>
+        Sexo: Masculino
+        <input type="radio" name="sexo" value="masculino" /> Femenino
+        <input type="radio" name="sexo" value="femenino" />
+      </p>
 
-Boton de Enviar
+      <p>Edad: <input type="number" name="edad" placeholder="edad" /></p>
 
+      <p>
+        Email: <input type="email" name="email" placeholder="email@dominio.com"
+      </p>
 
-</body>
+      <p>Usuario: <input type="text" name="usuario" placeholder="usuario" /></p>
+
+      <p>
+        Password: <input type="password" name="pass" placeholder="password" />
+      </p>
+
+      <p>
+        Confirmar Password:
+        <input type="password" name="confirmar_pass" placeholder="password" />
+      </p>
+
+      <p>
+        Tipo de servicio: Free
+        <input type="checkbox" name="tipo_servicio" value="free" /> / Standard
+        <input type="checkbox" name="tipo_servicio" value="standard" /> /
+        Premium <input type="checkbox" name="tipo_servicio" value="premium" />
+      </p>
+
+      <p>
+        Tema:
+        <select>
+          <option>Política</option>
+          <option>Negocios</option>
+          <option>Tecnología Salud</option>
+        </select>
+      </p>
+
+      <p>Agregue un comentario: <textarea> </textarea></p>
+
+      <p>
+        <button type="button">Boton de Enviar</button>
+      </p>
+    </form>
+  </body>
 </html>
