ejercicios de accesibilidad

--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -21,25 +21,48 @@
       Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!
     </h3>
     <form id="formulario_suscripcion">
-      <p>Nombre: <input type="text" name="nombre" placeholder="Nombre" /></p>
-
       <p>
-        Apellido: <input type="text" name="apellido" placeholder="Apellido" />
+        <label for="nombre"> Nombre: </label>
+        <input type="text" name="nombre" placeholder="Nombre" id="nombre" />
       </p>
 
       <p>
-        Sexo: Masculino
-        <input type="radio" name="sexo" value="masculino" /> Femenino
-        <input type="radio" name="sexo" value="femenino" />
+        <label for="apellido"> Apellido: </label>
+        <input
+          type="text"
+          name="apellido"
+          placeholder="Apellido"
+          id="apellido"
+        />
       </p>
-
-      <p>Edad: <input type="number" name="edad" placeholder="edad" /></p>
 
       <p>
-        Email: <input type="email" name="email" placeholder="email@dominio.com"
+        Sexo:
+        <label for="masculino"> Masculino </label>
+        <input type="radio" name="sexo" value="masculino" id="masculino" />
+        <label for="femenino"> Femenino </label>
+        <input type="radio" name="sexo" value="femenino" id="femenino" />
       </p>
 
-      <p>Usuario: <input type="text" name="usuario" placeholder="usuario" /></p>
+      <p>
+        <label for="edad"> Edad: </label
+        ><input type="number" name="edad" placeholder="edad" id="edad" />
+      </p>
+
+      <p>
+        <label for="email"> Email: </label>
+        <input
+          type="email"
+          name="email"
+          placeholder="email@dominio.com"
+          id="email"
+        />
+      </p>
+
+      <p>
+        <label for="usuario">Usuario: </label>
+        <input type="text" name="usuario" placeholder="usuario" id="usuario" />
+      </p>
 
       <p>
         Password: <input type="password" name="pass" placeholder="password" />
@@ -51,18 +74,32 @@
       </p>
 
       <p>
-        Tipo de servicio: Free
-        <input type="checkbox" name="tipo_servicio" value="free" /> / Standard
-        <input type="checkbox" name="tipo_servicio" value="standard" /> /
-        Premium <input type="checkbox" name="tipo_servicio" value="premium" />
+        Tipo de servicio:
+        <label for="free"> Free </label>
+        <input type="checkbox" name="tipo_servicio" value="free" id="free" /> /
+        <label for="standard"> Standard </label>
+        <input
+          type="checkbox"
+          name="tipo_servicio"
+          value="standard"
+          id="standard"
+        />
+        / <label for="premium"> Premium </label>
+        <input
+          type="checkbox"
+          name="tipo_servicio"
+          value="premium"
+          id="premium"
+        />
       </p>
 
       <p>
-        Tema:
-        <select>
-          <option>Política</option>
-          <option>Negocios</option>
-          <option>Tecnología Salud</option>
+        <label for="tema">Tema:</label>
+        <select id="tema">
+          <option value="politica">Política</option>
+          <option value="negocio">Negocios</option>
+          <option value="tecnologia">Tecnología</option>
+          <option value="salud">Salud</option>
         </select>
       </p>
 
