--- a/Ejercicios-HTML/ej_tablas.html
+++ b/Ejercicios-HTML/ej_tablas.html
@@ -20,6 +20,9 @@
   <body>
     <!-- Tabla de Congresos -->
     <table>
+      <caption>
+        Congresos y eventos
+      </caption>
       <thead>
         <th>Siglas</th>
         <th>Congreso o Evento</th>
