cambio en formulario

--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -103,7 +103,10 @@
         </select>
       </p>
 
-      <p>Agregue un comentario: <textarea> </textarea></p>
+      <p>
+        <label for="comentario">Agregue un comentario:</label>
+        <textarea id="comentario"> </textarea>
+      </p>
 
       <p>
         <button type="button">Boton de Enviar</button>
