--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -13,6 +13,17 @@
       body {
         font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
       }
+      a:link,
+      a:visited {
+        color: cadetblue;
+      }
+
+      a:hover {
+        font-size: 1.4em;
+      }
+      a:active {
+        font-weight: bold;
+      }
     </style>
   </head>
   <body>
