--- a/Ejercicios-CSS/ej_cv.html
+++ b/Ejercicios-CSS/ej_cv.html
@@ -1,44 +1,50 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>CV Nombre Apellido</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>CV Sara Aguirre</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="shortcut icon" href="imagenes/favicon.jpeg" />
+    <link rel="stylesheet" href="mi_estilo.css" type="text/css" />
+    <style></style>
+  </head>
+  <body>
+    <div>
+      <img id="principal" src="imagenes/icono_usuario.jpg" />
+      <h1>Sara Aguirre</h1>
+      <h2>Ing. en Informática</h2>
+    </div>
 
-<div>
-    <h1>Nombre Alumno</h1>
-    <h2>Ing. en Computacion</h2>
-</div>
-
-<div>
-    <h3>Datos Personales</h3>
-    <p><span>Fecha de Nacimiento:</span> dd/mm/aaaa</p>
-    <p><span>Email:</span> email@email.com</p>
-</div>
-
-<div>
-    <h3>Formacion Academica</h3>
-    <p><span>Carrera:</span> Ingeniería XXXXX</p>
-    <p><span>Universidad:</span> Universidad Católica de Córdoba</p>
-    <p><span>Año de Ingreso:</span> 2018</p>
-</div>
-
-<div>
-    <h3>Cursos</h3>
+    <div class="especial">
+      <h3>Datos Personales</h3>
+      <p><span>Fecha de Nacimiento:</span> 24/06/2006</p>
+      <p><span>Email:</span> 2423258@ucc.edu.ar</p>
+    </div>
 
     <div>
+      <h3>Formacion Academica</h3>
+      <p><span>Carrera:</span> Ingeniería XXXXX</p>
+      <p><span>Universidad:</span> Universidad Católica de Córdoba</p>
+      <p><span>Año de Ingreso:</span> 2024</p>
+    </div>
+
+    <div>
+      <h3>Cursos</h3>
+
+      <div>
         <h4>Nombre Curso 1</h4>
         <p><span>Lugar:</span> Nombre Institución</p>
-        <p><span>Año:</span> XXXX </p>
-    </div>
+        <p><span>Año:</span> XXXX</p>
+      </div>
 
-    <div>
+      <div>
         <h4>Nombre Curso 2</h4>
         <p><span>Lugar:</span> Nombre Institución</p>
-        <p><span>Año:</span> XXXX </p>
+        <p><span>Año:</span> XXXX</p>
+      </div>
     </div>
-</div>
-
-</body>
+  </body>
 </html>
