--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -24,6 +24,11 @@
       a:active {
         font-weight: bold;
       }
+      article {
+        column-count: 2;
+        column-gap: 100px;
+        margin: 0px 50px;
+      }
     </style>
   </head>
   <body>
@@ -37,7 +42,7 @@
       <h3 class="tituloNoticia">CordoBici</h3>
       Publicado el 07/03/2018 en Agropecuarias y Ambiente
       <article>
-        <div>
+        <div class="columna1">
           <p>
             Un intercambio académico inspiró a Joaquín, Nicolás, Guido y Facundo
             para elegir el tema de su trabajo final. Dos de ellos estuvieron el
@@ -74,7 +79,7 @@
             coordinador de la carrera y director de la tesis.
           </p>
         </div>
-        <div class="grid-item">
+        <div class="columna2">
           <p>
             Gracias a una profunda investigación comercial, sumada a una
             simulación realizada por un programa llamado anylogic, consiguieron
