--- a/Ejercicios-CSS/productos.html
+++ b/Ejercicios-CSS/productos.html
@@ -5,8 +5,57 @@
     <link href="catalogo.css" type="text/css" rel="stylesheet" />
   </head>
 
-  <body>
-    <main>
+  <body class="grid-container">
+    <header class="item1">Catalogo de Productos</header>
+    <nav class="item2">links de navegacion</nav>
+    <aside class="item3">
+      <form name="filter">
+        <fieldset>
+          <legend>Busquedas</legend>
+          <label for="search">Buscar:</label>
+          <input type="text" id="search" name="search" />
+        </fieldset>
+        <fieldset>
+          <legend>Precios</legend>
+          <p>
+            <label for="minimo">Minimo:</label>
+            <input type="number" id="minimo" name="precio-min" min="0" />
+          </p>
+          <p>
+            <label for="maximo">Maximo:</label>
+            <input type="number" id="maximo" name="precio-max" min="0" />
+          </p>
+        </fieldset>
+
+        <fieldset>
+          <legend>Tipo de Productos</legend>
+          <p>
+            <input
+              type="checkbox"
+              id="protectores"
+              name="tipo"
+              value="protectores"
+            />
+            <label for="preotectores">Protectores</label>
+          </p>
+          <p>
+            <input
+              type="checkbox"
+              id="entrenamiento"
+              name="tipo"
+              value="entrenamiento"
+            />
+            <label for="entrenamiento">CEntrenamiento</label>
+          </p>
+          <p>
+            <input type="checkbox" id="dobok" name="tipo" value="dobok" />
+            <label for="dobok">Dobok</label>
+          </p>
+        </fieldset>
+      </form>
+    </aside>
+
+    <main class="item4">
       <div>
         <img
           src="../Ejercicios-JavaScript/images/cabezal-cerrado.webp"
