--- a/Ejercicios-CSS/productos.html
+++ b/Ejercicios-CSS/productos.html
@@ -7,7 +7,10 @@
 
   <body class="grid-container">
     <header class="item1">Catalogo de Productos</header>
-    <nav class="item2">links de navegacion</nav>
+    <nav class="item2">
+      <a href="productos.html">Catalogo de Productos</a>
+      <a href="">Carrito de Compras</a>
+    </nav>
     <aside class="item3">
       <form name="filter">
         <fieldset>
